[gd_scene load_steps=7 format=3 uid="uid://csfw2xqp1u66m"]

[ext_resource type="Script" path="res://res/scripts/2d_scene_handler.gd" id="1_m8qap"]
[ext_resource type="PackedScene" uid="uid://d3aowb23p7ba1" path="res://scenes/subscenes/2d/2d_container.tscn" id="2_y6vwc"]
[ext_resource type="Script" path="res://res/scripts/editor_object.gd" id="3_cptwd"]
[ext_resource type="PackedScene" uid="uid://xejgaqbudtn1" path="res://scenes/subscenes/2d/control.tscn" id="4_taqkw"]
[ext_resource type="Script" path="res://scenes/subscenes/2d/control2D.gd" id="5_kmr57"]
[ext_resource type="PackedScene" uid="uid://cy2nvtwdjx6lg" path="res://scenes/subscenes/2d/h_slider.tscn" id="6_1j4wd"]

[node name="2dTest" type="Node2D"]
script = ExtResource("1_m8qap")

[node name="2dContainer" parent="." instance=ExtResource("2_y6vwc")]

[node name="Node2D" type="Node2D" parent="."]

[node name="Editor_Object" type="Node2D" parent="Node2D"]
script = ExtResource("3_cptwd")

[node name="Sprite2D" type="Sprite2D" parent="Node2D/Editor_Object"]
visible = false

[node name="cam_container" type="Node2D" parent="Node2D"]

[node name="Camera2D" type="Camera2D" parent="Node2D/cam_container"]

[node name="Control" type="Control" parent="Node2D/cam_container"]
z_index = -10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Node2D/cam_container/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4500.0
offset_top = -4500.0
offset_right = 4500.0
offset_bottom = 4500.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Item_Select" parent="." instance=ExtResource("4_taqkw")]

[node name="Control2D" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 627.0
offset_top = 4.0
offset_right = 1141.0
offset_bottom = 318.0
script = ExtResource("5_kmr57")

[node name="TabContainer" type="TabContainer" parent="Control2D"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="Charge_Editor" type="VBoxContainer" parent="Control2D/TabContainer"]
layout_mode = 2
theme_override_constants/separation = 40
metadata/_tab_index = 0

[node name="Carga" parent="Control2D/TabContainer/Charge_Editor" instance=ExtResource("6_1j4wd")]
layout_mode = 2

[node name="X" parent="Control2D/TabContainer/Charge_Editor" instance=ExtResource("6_1j4wd")]
layout_mode = 2

[node name="Y" parent="Control2D/TabContainer/Charge_Editor" instance=ExtResource("6_1j4wd")]
layout_mode = 2

[node name="Z" parent="Control2D/TabContainer/Charge_Editor" instance=ExtResource("6_1j4wd")]
layout_mode = 2

[node name="W" parent="Control2D/TabContainer/Charge_Editor" instance=ExtResource("6_1j4wd")]
layout_mode = 2

[connection signal="value_changed" from="Control2D/TabContainer/Charge_Editor/Carga" to="Control2D" method="_on_carga_value_changed"]
[connection signal="value_changed" from="Control2D/TabContainer/Charge_Editor/X" to="Control2D" method="_on_x_value_changed"]
[connection signal="value_changed" from="Control2D/TabContainer/Charge_Editor/Y" to="Control2D" method="_on_y_value_changed"]
[connection signal="value_changed" from="Control2D/TabContainer/Charge_Editor/Z" to="Control2D" method="_on_z_value_changed"]
[connection signal="value_changed" from="Control2D/TabContainer/Charge_Editor/W" to="Control2D" method="_on_w_value_changed"]

[editable path="Item_Select"]
